[package]
name = "audio-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
hound = "3.5"
whisper-rs = { version = "0.12", features = ["metal"] }
symphonia = { version = "0.5", features = ["all"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
