[package]
name = "audio-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
pyannote-rs = "0.3"

# Use Metal feature on macOS for GPU acceleration, CPU on other platforms
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.12", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.12" }
